# ParallelGameOfLife

./: .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md  appveyor.yml
CMake/: CTestContinuous.cmake.in  CTestCustom.cmake.in  FindEigen.cmake  Findgflags.cmake.in  Findglog.cmake.in  StartVS.bat.in  SuperBuild.cmake  mpExternalProjectHelperMacros.cmake
CMake/ExternalProjects/: Boost.cmake  Eigen.cmake  OpenCV.cmake  VTK.cmake  gflags.cmake  glog.cmake
Code/: CMakeLists.txt
Code/Apps/: CMakeLists.txt  golGameApp.cpp  golMyFirstApp.cpp  golSerialApp.cpp
Code/Gui/: CMakeLists.txt
Code/Lib/: CMakeLists.txt  golBasicTypes.cpp  golBasicTypes.h  golDistributedGame.cpp  golDistributedGame.h  golGameOfLife.h  golInOutFrames.cpp  golInOutFrames.h  golMyFunctions.cpp  golMyFunctions.h  golSerialGame.cpp  golSerialGame.h  golSerialSharedGame.cpp  golSerialSharedGame.h  golSharedGame.cpp  golSharedGame.h  golWin32ExportHeader.h
Documentation/: CMakeLists.txt  License.dox  MainPage.dox.in
ScalingScript/: README.txt  scaling_game_omp.sh
Testing/: CMakeLists.txt  golBasicTest.cpp  golCatchMain.cpp  golCatchMain.h  golCommandLineArgsTest.cpp  golDistributedGameTest.cpp  golInOutFramesTest.cpp  golSerialGameTest.cpp  golSerialSharedGameTest.cpp  golSharedGameTest.cpp
Testing/Data/: wrong_seed.life
Utilities/CppCheck/: GAMEOFLIFECppCheck.cmake  GAMEOFLIFEFiles.txt.in
Utilities/Doxygen/: doxygen.config.in  gameoflifedoxygen.pl.in
Utilities/KWStyle/: GAMEOFLIFEHeader.h  GAMEOFLIFEKWS.xml.in  GAMEOFLIFEKWStyle.cmake
VideoScript/: MakeVideo.py  README.txt
